--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@reduxjs/toolkit": "^1.9.7",
     "apexcharts": "^4.5.0",
     "axios": "^1.7.9",
+    "dotenv": "^16.4.7",
     "flowbite": "^2.0.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
